Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.2, v4.6.0 and v4.6.2
    - ADDED: Disallow service operators from mass-enrolling and mass-revoking/removing user certificates


client-5.5.1, in development
----------------------
    - ADDED: Allow non-root users to customize and use KeyTalk Linux client (KEYTALK-409)


server-5.5.1, 22 February 2019
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.1, v4.6.0 and v4.6.2
    - ADDED: Allow ordering GlobalSign Personal Sign 1 (PS1) certificates (KEYTALK-507)
    - ADDED: Allow for alternative validation CA for client-certificate logins to KeyTalk (KEYTALK-511)
    - CHANGED: Move the template messages per service to the NOTIFICATION tab (KEYTALK-508)
    - CHANGED: Move SMS  & SMTP tab from System to Notifications (KEYTALK-510)
    - CHANGED: Disallow self-service logins as well as enrolling S/MIME certificates for 3rd party S/MIME certificate recipient services

    CHANGED shared Db schema:
      - version 7.0-> 8.0


server-5.5.0, 18 January 2019
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.5.0, v4.6.0 and v4.6.2
    - ADDED: Enforce SMS password on mail cert when allowing requesting of cert for 3rd parties (KEYTALK-500)
    - ADDED: REST API to check availability of S/MIME certificate enrollment for 3rd parties (KEYTALK-501)
    - ADDED: REST API for self-service to enroll S/MIME certificates for 3rd parties (KEYTALK-501)
    - ADDED: Extend HWSIG with random number (Windows, Linux) (KEYTALK-502)
    - ADDED: Allow using coupon code for GlobalSign mSSL orders (KEYTALK-503)
    - ADDED: Add SERVICE-level flag instructing KT apps to install the received cert to the machine certificate store (KEYTALK-504)