@@ -41,7 +41,7 @@
       <exec>
         <executable>cloc</executable>
         <args>--no3 --quiet --progress-rate=0 --xml /builds/Software/SysInfra/TestProjects /builds/Software/Common/TestProjects /builds/Software/Client/TestProjects /builds/Software/Server/TestProjects /builds/Software/WebUI/TestProjects</args>
-        <timeout>60</timeout>
+        <timeout>120</timeout>
         <workingDirectory>/</workingDirectory>
       </exec>
 
